tests/ui/invalid_type.stderr
error: Invalid size for u129, expected u{1..128}
 --> tests/ui/invalid_type.rs:6:21
  |
6 |             field0: u129,
  |                     ^^^^
