tests/ui/invalid_type.rs
use macros::bitstruct;

fn main() {
    #[bitstruct]
    struct Bits {
        field0: u129,
    }
}
